# anibridge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  main.py  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docker-publish.yml  tests.yml
alembic/: env.py
alembic/versions/: 2026-01-17-03-56_ff7071ae23d8.py  2026-01-26-07-37_38ae72352337.py  2026-02-23-22-55_0b5e4f0b749e.py  2026-03-27-19-29_48fc289f8e59.py  2026-04-05-02-53_a1b2c3d4e5f6.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/src/lib/components/: toast-host.svelte
frontend/src/lib/components/code-editor/: code-editor.svelte  monaco.ts  yaml-analysis.ts  yaml-editor.svelte  yaml-providers.ts  yaml-schema.ts
frontend/src/lib/components/config/: schema-form-node.svelte  schema-form.ts
frontend/src/lib/components/icons/: github-icon.svelte
frontend/src/lib/components/mappings/: capabilities-cache.ts  edit-modal.svelte  includes-modal.svelte  mapping-card.svelte  mappings-table.svelte  tool-bar.svelte
frontend/src/lib/components/timeline/: timeline-diff-viewer.svelte  timeline-global-pins-manager.svelte  timeline-header.svelte  timeline-item.svelte  timeline-manage-pins.svelte  utils.ts
frontend/src/lib/types/: anilist.ts  api.ts
frontend/src/lib/ui/: modal.svelte
frontend/src/lib/utils/: api.ts  provider-links.ts  text.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/logs/: +page.svelte
frontend/src/routes/mappings/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/timeline/[profile]/: +page.svelte
scripts/: docker_init.sh
src/: __init__.py
src/anibridge/app/: __init__.py  exceptions.py  logging.py
src/anibridge/app/config/: __init__.py  database.py  settings.py  sync_rules.py
src/anibridge/app/core/: anilist.py  animap.py  bridge.py  mappings.py  providers.py
src/anibridge/app/core/sched/: __init__.py  client.py  coord.py  profile.py
src/anibridge/app/core/sync/: __init__.py  base.py  cache.py  history.py  movie.py  rules.py  show.py  stats.py  targeting.py
src/anibridge/app/models/: __init__.py
src/anibridge/app/models/db/: __init__.py  animap.py  base.py  housekeeping.py  pin.py  sync_history.py
src/anibridge/app/models/schemas/: __init__.py  _pydantic_msgspec.py  anilist.py  provider.py
src/anibridge/app/utils/: async_tasks.py  booru_query.py  cron.py  htpasswd.py  human.py  logging.py  mapping_ranges.py  memory.py  paths.py  sql.py  terminal.py  version.py
src/anibridge/app/web/: __init__.py  app.py  state.py
src/anibridge/app/web/middlewares/: __init__.py  basic_auth.py  request_logging.py
src/anibridge/app/web/routes/: __init__.py
src/anibridge/app/web/routes/api/: __init__.py  backups.py  config.py  history.py  logs.py  mappings.py  pins.py  status.py  sync.py  system.py
src/anibridge/app/web/routes/webhook/: __init__.py  provider.py
src/anibridge/app/web/routes/ws/: __init__.py  history.py  (+2 more)
src/anibridge/app/web/services/: backup_service.py  configuration_service.py  history_service.py  logging_handler.py  mapping_overrides_service.py  mappings_query_spec.py  mappings_service.py  pin_service.py
src/anibridge/scripts/: __init__.py  dev.py
src/config/: database.py  settings.py
src/core/: anilist.py  animap.py  bridge.py  mappings.py  providers.py  sched.py
src/core/sched/: __init__.py  client.py  profile.py
src/core/sync/: base.py  movie.py  show.py  stats.py
src/models/db/: animap.py  sync_history.py
src/models/schemas/: anilist.py
src/utils/: async_tasks.py  cache.py  limiter.py  logging.py  mapping_ranges.py  requests.py  terminal.py
src/web/: app.py  state.py
src/web/middlewares/: basic_auth.py  request_logging.py
src/web/routes/api/: config.py  history.py  logs.py  mappings.py  pins.py  status.py  sync.py  system.py
src/web/routes/webhook/: provider.py
src/web/services/: backup_service.py  configuration_service.py  history_service.py  logging_handler.py  mapping_overrides_service.py  mappings_query_spec.py  mappings_service.py  pin_service.py
tests/: conftest.py  test_main.py
tests/config/: test_database.py  test_settings.py
tests/core/: test_anilist.py  test_animap.py  test_bridge.py  test_mappings.py  test_providers.py  test_sched.py
tests/core/sched/: test_client.py  test_profile.py
tests/core/sync/: conftest.py  fakes.py  test_base.py  test_base_client.py  test_cache.py  test_history.py  test_movie.py  test_movie_client.py  test_rules.py  test_show.py  test_show_client.py  test_stats.py  test_targeting.py
tests/models/db/: test_base.py
tests/utils/: test_async_tasks.py  test_booru_query.py  test_cache.py  test_cron.py  test_htpasswd.py  test_human.py  test_logging.py  test_mapping_ranges.py  test_requests.py  test_sql.py  test_terminal.py  test_version.py
tests/web/: support.py  test_app.py  test_backup_service.py  test_basic_auth.py  test_config_api_auth.py  test_history_service.py  test_logging_handler.py  test_logs_api.py  test_mapping_overrides_service.py  test_mappings_service.py  test_pin_service.py  test_request_logging_middleware.py  test_state.py  test_system_api.py
tests/web/middlewares/: test_basic_auth.py  test_request_logging.py
tests/web/routes/api/: conftest.py  test_backups.py  test_config.py  test_history.py  test_logs.py  test_mappings.py  test_pins.py  test_status.py  test_sync.py  test_system.py
tests/web/routes/webhook/: test_provider.py
tests/web/routes/ws/: test_history.py  test_logs.py  test_status.py
tests/web/routes/z/: __init__.py  test_livez.py  test_readyz.py
tests/web/services/: test_backup_service.py  test_configuration_service.py  test_history_service.py  test_logging_handler.py  test_mapping_overrides_service.py  test_mappings_query_spec.py  test_mappings_service.py  test_pin_service.py
(+3 files in other folders)
