[project]
name = "AniBridge"
version = "2.0.0"
description = "The smart way to keep your anime lists perfectly synchronized."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }

authors = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]
maintainers = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]

keywords = [
    "docker",
    "sync",
    "scrobble",
    "synchronization",
    "monitoring",
    "anime",
    "plex",
    "anilist",
    "plexpy",
    "anibridge",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.3",
    "anibridge-anilist-provider>=0.2.0b4,<0.3.0",
    "anibridge-library-base>=0.2.0b2",
    "anibridge-list-base>=0.2.0b3",
    "anibridge-mal-provider>=0.2.0b3,<0.3.0",
    "anibridge-plex-provider>=0.2.0b1,<0.3.0",
    "bcrypt>=5.0.0",
    "cachetools>=5.5.2",
    "colorama>=0.4.6",
    "diskcache>=5.6.3",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.128.0",
    "orjson>=3.11.6",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "pyparsing>=3.3.2",
    "rapidfuzz>=3.14.3",
    "sqlalchemy>=2.0.46",
    "zstandard>=0.25.0",
]

[project.scripts]
ab-build = "scripts.dev:build"
ab-bump-version = "scripts.dev:bump_version"
ab-clean = "scripts.dev:clean"
ab-deps-install = "scripts.dev:deps_install"
ab-deps-upgrade = "scripts.dev:deps_upgrade"
ab-dev = "scripts.dev:dev"
ab-format = "scripts.dev:format"
ab-lint = "scripts.dev:lint"
ab-start = "scripts.dev:start"
ab-test = "scripts.dev:test"

[project.urls]
Documentation = "https://anibridge.eliasbenb.dev"
Homepage = "https://anibridge.eliasbenb.dev"
Issues = "https://github.com/anibridge/anibridge/issues"
Source = "https://github.com/anibridge/anibridge"

[tool.ruff]
exclude = ["alembic"]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "DOC", "E", "F", "I", "RUF", "SIM", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.param_functions.Body",
    "fastapi.param_functions.Cookie",
    "fastapi.param_functions.Depends",
    "fastapi.param_functions.File",
    "fastapi.param_functions.Form",
    "fastapi.param_functions.Header",
    "fastapi.param_functions.Path",
    "fastapi.param_functions.Query",
    "fastapi.param_functions.Security",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src"
filterwarnings = []

[tool.uv.build-backend]
module-name = "scripts"
module-root = ""

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "memray>=1.19.1",
    "py-spy @ git+https://github.com/czardoz/py-spy.git", # Until upstream suports Python 3.14
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
