[project]
name = "anibridge"
version = "2.1.1"
description = "The smart way to keep your anime lists perfectly synchronized."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"

authors = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]
maintainers = [
    { name = "Elias Benbourenane", email = "eliasbenbourenane@gmail.com" },
]

keywords = [
    "anibridge",
    "anime",
    "scrobble",
    "synchronization",
    "monitoring",
    "plex",
    "jellyfin",
    "emby",
    "anilist",
    "myanimelist",
    "trakt",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "anibridge-anilist-provider>=0.2.0",
    "anibridge-emby-provider>=0.2.0",
    "anibridge-jellyfin-provider>=0.2.0",
    "anibridge-library-base>=0.2.0,<1.0.0",
    "anibridge-list-base>=0.2.0,<1.0.0",
    "anibridge-mal-provider>=0.2.0",
    "anibridge-plex-provider>=0.2.0",
    # "anibridge-trakt-provider>=0.2.0",
    "anibridge-utils>=0.2.0,<1.0.0",
    "bcrypt>=5.0.0",
    "colorama>=0.4.6",
    "croniter>=6.2.2",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.133.1",
    "msgspec>=0.21.1",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "pyparsing>=3.3.2",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "sqlalchemy>=2.0.47",
]

[project.scripts]
ab-build = "anibridge.scripts.dev:build"
ab-clean = "anibridge.scripts.dev:clean"
ab-deps-install = "anibridge.scripts.dev:deps_install"
ab-deps-upgrade = "anibridge.scripts.dev:deps_upgrade"
ab-dev = "anibridge.scripts.dev:dev"
ab-format = "anibridge.scripts.dev:format_"
ab-lint = "anibridge.scripts.dev:lint"
ab-meta-setup = "anibridge.scripts.dev:meta_setup"
ab-start = "anibridge.scripts.dev:start"
ab-test = "anibridge.scripts.dev:test"

[project.urls]
Documentation = "https://anibridge.eliasbenb.dev"
Homepage = "https://anibridge.eliasbenb.dev"
Issues = "https://github.com/anibridge/anibridge/issues"
Source = "https://github.com/anibridge/anibridge"

[tool.ruff]
extend-exclude = ["alembic", "packages"]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "D",
    "E",
    "F",
    "FAST",
    "I",
    "PERF",
    "RUF",
    "SIM",
    "UP",
    "W",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.param_functions.Body",
    "fastapi.param_functions.Cookie",
    "fastapi.param_functions.Depends",
    "fastapi.param_functions.File",
    "fastapi.param_functions.Form",
    "fastapi.param_functions.Header",
    "fastapi.param_functions.Path",
    "fastapi.param_functions.Query",
    "fastapi.param_functions.Security",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src"
filterwarnings = []

[tool.uv.build-backend]
module-name = "anibridge"
namespace = true

[tool.uv.sources]
# anibridge-anilist-provider = { git = "https://github.com/anibridge/anibridge-anilist-provider.git", tag = "main" }
# anibridge-emby-provider = { git = "https://github.com/anibridge/anibridge-emby-provider.git", tag = "main" }
# anibridge-jellyfin-provider = { git = "https://github.com/anibridge/anibridge-jellyfin-provider.git", tag = "main" }
# anibridge-library-base = { git = "https://github.com/anibridge/anibridge-library-base.git", tag = "main" }
# anibridge-list-base = { git = "https://github.com/anibridge/anibridge-list-base.git", tag = "main" }
# anibridge-mal-provider = { git = "https://github.com/anibridge/anibridge-mal-provider.git", tag = "main" }
# anibridge-plex-provider = { git = "https://github.com/anibridge/anibridge-plex-provider.git", tag = "main" }
# anibridge-trakt-provider = { git = "https://github.com/anibridge/anibridge-trakt-provider.git", tag = "main" }
# anibridge-utils = { git = "https://github.com/anibridge/anibridge-utils.git", tag = "main" }
py-spy = { git = "https://github.com/czardoz/py-spy.git" } # Until upstream suports Python 3.14

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "memray>=1.19.1",
    "py-spy",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.22",
]
